chore(codegen): add generated files