@@ -1,432 +1,355 @@
 package com.tax.dvs.validator;
 
 import com.fasterxml.jackson.databind.JsonNode;
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.Data;
-import lombok.NoArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.math.BigDecimal;
 import java.util.*;
-import java.util.stream.Collectors;
 
+/**
+ * Validator for IRS Schedule F to Form 8582 Matching
+ * 
+ * Business Rules:
+ * 1. Match business names between Schedule F and Form 8582
+ * 2. Validate loss calculation: Line 9 (GrossIncome) - Line 33 (TotalExpenses)
+ * 3. Verify calculated loss matches Form 8582 reported loss
+ * 4. Validate passive activity treatment (non-material participation)
+ * 5. Verify Schedule F Line 34 (NetFarmProfitLossAmt) reporting
+ * 
+ * IRS Rules:
+ * - Passive activity losses are limited per IRC Section 469
+ * - Non-materially participated farming activities are passive
+ * - Passive losses must be tracked on Form 8582
+ * - Schedule F Line 34 may show $0 for passive losses disallowed by Form 8582
+ */
 @Component
 public class ScheduleF8582Validator {
 
+    private static final String SCHEDULE_F_PATH = "/body/forms[]";
+    private static final String FORM_8582_PATH = "/body/forms[]";
+    private static final BigDecimal ZERO = BigDecimal.ZERO;
+
     /**
-     * Validates that Schedule F farm activities correctly match with Form 8582 passive activity losses.
-     * 
-     * Business Rules:
-     * 1. Business names on Schedule F must match Form 8582 activity names for passive activities
-     * 2. When a loss exists, Schedule F Line 34 (NetFarmProfitLossAmt) may show $0
-     * 3. Actual loss is calculated as: Line 9 (GrossIncomeAmt) - Line 33 (TotalExpensesAmt)
-     * 4. Calculated loss must match Form 8582 CurrentYearNetLossAmt
-     * 5. Only passive activities (MateriallyParticipatedInd = false) should appear on Form 8582
-     * 6. Active activities (MateriallyParticipatedInd = true) should NOT appear on Form 8582
-     *
-     * IRS Rules:
-     * - Passive activity losses are limited under IRC Section 469
-     * - Material participation determines if activity is active or passive
-     * - Form 8582 tracks only passive activity losses
-     * 
-     * @param payload The full tax return JSON payload
-     * @return ValidationResult containing validation status and details
+     * Validates the entire payload for Schedule F to Form 8582 matching
      */
-    public ValidationResult validateScheduleFToForm8582(JsonNode payload) {
-        ValidationResult result = ValidationResult.builder()
-                .valid(true)
-                .errors(new ArrayList<>())
-                .warnings(new ArrayList<>())
-                .scheduleFDetails(new ArrayList<>())
-                .form8582Details(new ArrayList<>())
-                .build();
-
+    public ValidationResult validate(JsonNode payload) {
+        ValidationResult result = new ValidationResult();
+        
         try {
-            // Extract Schedule F data
-            List<ScheduleFData> scheduleFList = extractScheduleFData(payload);
-            result.getScheduleFDetails().addAll(scheduleFList);
-
+            // Extract Schedule F forms
+            List<ScheduleFData> scheduleFForms = extractScheduleFData(payload);
+            
             // Extract Form 8582 data
-            List<Form8582Data> form8582List = extractForm8582Data(payload);
-            result.getForm8582Details().addAll(form8582List);
-
-            // Validation 1: Check passive activities match between Schedule F and Form 8582
-            validatePassiveActivityMatching(scheduleFList, form8582List, result);
-
-            // Validation 2: Verify loss calculations and matching
-            validateLossCalculations(scheduleFList, form8582List, result);
-
-            // Validation 3: Verify active activities are NOT in Form 8582
-            validateActiveActivitiesExcluded(scheduleFList, form8582List, result);
-
-            // Validation 4: Verify Line 34 shows $0 for losses
-            validateLine34ZeroForLosses(scheduleFList, result);
-
+            Form8582Data form8582 = extractForm8582Data(payload);
+            
+            if (scheduleFForms.isEmpty()) {
+                result.addError("No Schedule F forms found in payload");
+                return result;
+            }
+            
+            // Validate each Schedule F
+            for (ScheduleFData scheduleF : scheduleFForms) {
+                validateScheduleF(scheduleF, form8582, result);
+            }
+            
+            // Validate Form 8582 completeness
+            validateForm8582Completeness(scheduleFForms, form8582, result);
+            
         } catch (Exception e) {
-            result.setValid(false);
-            result.getErrors().add("Validation error: " + e.getMessage());
+            result.addError("Validation exception: " + e.getMessage());
         }
-
+        
         return result;
     }
 
     /**
-     * Extracts Schedule F data from the payload
+     * Validates a single Schedule F against Form 8582
      */
-    private List<ScheduleFData> extractScheduleFData(JsonNode payload) {
-        List<ScheduleFData> scheduleFList = new ArrayList<>();
-        JsonNode forms = payload.at("/body/forms");
+    private void validateScheduleF(ScheduleFData scheduleF, Form8582Data form8582, ValidationResult result) {
+        String businessName = scheduleF.getBusinessName();
+        
+        // Rule 1: Calculate net profit/loss (Line 9 - Line 33)
+        BigDecimal calculatedNet = scheduleF.getGrossIncome().subtract(scheduleF.getTotalExpenses());
+        
+        // Rule 2: Validate material participation status
+        boolean isPassive = !scheduleF.isMateriallyParticipated();
+        
+        if (isPassive) {
+            // Rule 3: For passive activities, validate Form 8582 matching
+            validatePassiveActivity(scheduleF, calculatedNet, form8582, result);
+        } else {
+            // Rule 4: For materially participated activities, validate Line 34 reporting
+            validateActiveActivity(scheduleF, calculatedNet, result);
+        }
+    }
 
-        if (forms.isArray()) {
-            for (JsonNode form : forms) {
-                String formNum = form.at("/formNum").asText("");
-                if ("IRS1040ScheduleF".equals(formNum)) {
-                    ScheduleFData data = parseScheduleFForm(form);
-                    scheduleFList.add(data);
-                }
+    /**
+     * Validates passive activity treatment
+     */
+    private void validatePassiveActivity(ScheduleFData scheduleF, BigDecimal calculatedNet,
+                                              Form8582Data form8582, ValidationResult result) {
+        String businessName = scheduleF.getBusinessName();
+        
+        // Find matching entry in Form 8582
+        PassiveActivity passiveActivity = form8582.findActivityByName(businessName);
+        
+        if (passiveActivity == null) {
+            if (calculatedNet.compareTo(ZERO) < 0) {
+                result.addError("Schedule F '" + businessName + "' has a loss of " + 
+                    calculatedNet + " but is not found on Form 8582");
+            }
+            return;
+        }
+        
+        // Rule 5: Validate business name matching
+        if (!businessName.equalsIgnoreCase(passiveActivity.getActivityName())) {
+            result.addWarning("Business name mismatch: Schedule F '" + businessName + 
+                "' vs Form 8582 '" + passiveActivity.getActivityName() + "'");
+        }
+        
+        // Rule 6: Validate loss amount matching
+        if (calculatedNet.compareTo(ZERO) < 0) {
+            BigDecimal form8582Loss = passiveActivity.getCurrentYearLoss();
+            
+            if (calculatedNet.abs().compareTo(form8582Loss) != 0) {
+                result.addError("Loss amount mismatch for '" + businessName + "': " +
+                    "Calculated loss (Line 9 - Line 33) = " + calculatedNet +
+                    ", Form 8582 loss = " + form8582Loss);
+            } else {
+                result.addSuccess("Loss amount matches for '" + businessName + "': " + 
+                    form8582Loss);
             }
         }
+        
+        // Rule 7: Validate Schedule F Line 34 reporting for passive losses
+        if (calculatedNet.compareTo(ZERO) < 0) {
+            if (scheduleF.getNetFarmProfitLoss().compareTo(ZERO) != 0) {
+                result.addWarning("Schedule F Line 34 for '" + businessName + 
+                    "' shows " + scheduleF.getNetFarmProfitLoss() + 
+                    " but should show $0 due to passive loss limitation (loss tracked on Form 8582)");
+            } else {
+                result.addInfo("Schedule F Line 34 for '" + businessName + 
+                    "' correctly shows $0 (passive loss limited by Form 8582)");
+            }
+        }
+    }
 
-        return scheduleFList;
+    /**
+     * Validates active (materially participated) activity
+     */
+    private void validateActiveActivity(ScheduleFData scheduleF, BigDecimal calculatedNet,
+                                           ValidationResult result) {
+        String businessName = scheduleF.getBusinessName();
+        
+        // Rule 8: For active activities, Line 34 should match calculated net
+        if (calculatedNet.compareTo(scheduleF.getNetFarmProfitLoss()) != 0) {
+            result.addError("Schedule F Line 34 mismatch for active activity '" + businessName + "': " +
+                "Calculated (Line 9 - Line 33) = " + calculatedNet +
+                ", Line 34 = " + scheduleF.getNetFarmProfitLoss());
+        } else {
+            result.addSuccess("Schedule F Line 34 correctly reports " + calculatedNet + 
+                "for active activity '" + businessName + "'");
+        }
+    }
+
+    /**
+     * Validates that all passive losses are properly reported on Form 8582
+     */
+    private void validateForm8582Completeness(List<ScheduleFData> scheduleFForms,
+                                                    Form8582Data form8582, ValidationResult result) {
+        // Count passive activities with losses
+        long passiveLossCount = scheduleFForms.stream()
+            .filter(sf -> !sf.isMateriallyParticipated())
+            .filter(sf -> sf.getGrossIncome().subtract(sf.getTotalExpenses()).compareTo(ZERO) < 0)
+            .count();
+            
+        if (passiveLossCount > form8582.getActivities().size()) {
+            result.addError("Form 8582 is missing passive activities: " + 
+                passiveLossCount + " passive losses found, but only " + 
+                form8582.getActivities().size() + " activities on Form 8582");
+        }
+    }
+
+    /**
+     * Extracts Schedule F data from payload
+     */
+    private List<ScheduleFData> extractScheduleFData(JsonNode payload) {
+        List<ScheduleFData> result = new ArrayList<>();
+        
+        JsonNode forms = payload.at("/body/forms");
+        if (forms == null || !forms.isArray()) {
+            return result;
+        }
+        
+        for (JsonNode form : forms) {
+            String formNum = form.path("formNum").asText();
+            if ("IRS1040ScheduleF".equals(formNum)) {
+                result.add(parseScheduleF(form));
+            }
+        }
+        
+        return result;
     }
 
     /**
      * Parses a single Schedule F form
      */
-    private ScheduleFData parseScheduleFForm(JsonNode form) {
+    private ScheduleFData parseScheduleF(JsonNode form) {
         ScheduleFData data = new ScheduleFData();
         
-        data.setSequenceNum(form.at("/sequenceNum").asText(""));
-        data.setEin(getLineItemValue(form, "/IRS1040ScheduleF/EIN"));
-        
-        // Extract business name
-        String businessName = getLineItemValue(form, "/IRS1040ScheduleF/FarmProprietorName/BusinessNameLine1Txt");
-        if (businessName.isEmpty()) {
-            businessName = getLineItemValue(form, "/IRS1040ScheduleF/PrincipalProductDesc");
+        JsonNode lineItems = form.path("lineItems");
+        if (!lineItems.isArray()) {
+            return data;
         }
-        data.setBusinessName(businessName);
         
-        data.setPrincipalProduct(getLineItemValue(form, "/IRS1040ScheduleF/PrincipalProductDesc"));
-        
-        // Material participation indicator
-        String materialParticipation = getLineItemValue(form, "/IRS1040ScheduleF/MateriallyParticipatedInd");
-        data.setMateriallyParticipated("true".equalsIgnoreCase(materialParticipation));
-        
-        // Line 9 - Gross Income
-        String grossIncomeStr = getLineItemValue(form, "/IRS1040ScheduleF/FarmIncomeCashMethodGrp/GrossIncomeAmt");
-        data.setGrossIncomeAmt(parseAmount(grossIncomeStr));
-        
-        // Line 33 - Total Expenses
-        String totalExpensesStr = getLineItemValue(form, "/IRS1040ScheduleF/FarmExpensesGrp/TotalExpensesAmt");
-        data.setTotalExpensesAmt(parseAmount(totalExpensesStr));
-        
-        // Line 34 - Net Farm Profit/Loss
-        String netProfitLossStr = getLineItemValue(form, "/IRS1040ScheduleF/FarmExpensesGrp/NetFarmProfitLossAmt");
-        data.setNetFarmProfitLossAmt(parseAmount(netProfitLossStr));
-        
-        // Calculate actual loss (Line 9 - Line 33)
-        data.setCalculatedNetAmt(data.getGrossIncomeAmt().subtract(data.getTotalExpensesAmt()));
+        for (JsonNode lineItem : lineItems) {
+            String lineName = lineItem.path("lineNameTxt").asText();
+            
+            if (lineName.contains("/FarmProprietorName/BusinessNameLine1Txt")) {
+                data.setBusinessName(lineItem.path("perReturnValueTxt").asText());
+            } else if (lineName.contains("/MateriallyParticipatedInd")) {
+                data.setMateriallyParticipated("true".equalsIgnoreCase(
+                    lineItem.path("perReturnValueTxt").asText()));
+            } else if (lineName.contains("/FarmIncomeCashMethodGrp/GrossIncomeAmt")) {
+                data.setGrossIncome(new BigDecimal(lineItem.path("perReturnValueTxt").asText("0")));
+            } else if (lineName.contains("/FarmExpensesGrp/TotalExpensesAmt")) {
+                data.setTotalExpenses(new BigDecimal(lineItem.path("perReturnValueTxt").asText("0")));
+            } else if (lineName.contains("/FarmExpensesGrp/NetFarmProfitLossAmt")) {
+                data.setNetFarmProfitLoss(new BigDecimal(lineItem.path("perReturnValueTxt").asText("0")));
+            }
+        }
         
         return data;
     }
 
     /**
-     * Extracts Form 8582 data from the payload
+     * Extracts Form 8582 data from payload
      */
-    private List<Form8582Data> extractForm8582Data(JsonNode payload) {
-        List<Form8582Data> form8582List = new ArrayList<>();
+    private Form8582Data extractForm8582Data(JsonNode payload) {
+        Form8582Data data = new Form8582Data();
+        
         JsonNode forms = payload.at("/body/forms");
-
-        if (forms.isArray()) {
-            for (JsonNode form : forms) {
-                String formNum = form.at("/formNum").asText("");
-                if ("IRS8582".equals(formNum)) {
-                    form8582List.addAll(parseForm8582(form));
-                }
+        if (forms == null || !forms.isArray()) {
+            return data;
+        }
+        
+        for (JsonNode form : forms) {
+            String formNum = form.path("formNum").asText();
+            if ("IRS8582".equals(formNum)) {
+                parseForm8582(form, data);
+                break;
             }
         }
-
-        return form8582List;
+        
+        return data;
     }
 
     /**
      * Parses Form 8582 data
      */
-    private List<Form8582Data> parseForm8582(JsonNode form) {
-        List<Form8582Data> dataList = new ArrayList<>();
-        
-        // Parse Worksheet Passive Group
-        JsonNode parentWrkshtPassiveGrp = findLineItem(form, "/IRS8582/ParentWrkshtPassiveGrp");
-        if (parentWrkshtPassiveGrp != null && !parentWrkshtPassiveGrp.isMissingNode()) {
-            JsonNode wrkshtPassiveGrpArray = parentWrkshtPassiveGrp.at("/lineItems");
-            if (wrkshtPassiveGrpArray.isArray()) {
-                for (JsonNode item : wrkshtPassiveGrpArray) {
-                    String lineName = item.at("/lineNameTxt").asText("");
-                    if (lineName.contains("WrkshtPassiveGrp") && !lineName.contains("Total")) {
-                        Form8582Data data = parseWrkshtPassiveGrp(item);
-                        if (data != null) {
-                            dataList.add(data);
-                        }
-                    }
-                }
-            }
+    private void parseForm8582(JsonNode form, Form8582Data data) {
+        JsonNode lineItems = form.path("lineItems");
+        if (!lineItems.isArray()) {
+            return;
         }
         
-        return dataList;
-    }
-
-    /**
-     * Parses a single Worksheet Passive Group entry
-     */
-    private Form8582Data parseWrkshtPassiveGrp(JsonNode group) {
-        Form8582Data data = new Form8582Data();
-        
-        JsonNode lineItems = group.at("/lineItems");
-        if (lineItems.isArray()) {
-            for (JsonNode item : lineItems) {
-                String lineName = item.at("/lineNameTxt").asText("");
-                String value = item.at("/perReturnValueTxt").asText("");
-                
-                if (lineName.contains("NonParticipateActivityNm")) {
-                    data.setActivityName(value);
-                } else if (lineName.contains("CurrentYearNetLossAmt")) {
-                    data.setCurrentYearNetLossAmt(parseAmount(value));
-                } else if (lineName.contains("OverallLossAmt")) {
-                    data.setOverallLossAmt(parseAmount(value));
-                }
-            }
-        }
-        
-        return data.getActivityName() != null ? data : null;
-    }
-
-    /**
-     * Validation 1: Verify passive activities match between Schedule F and Form 8582
-     */
-    private void validatePassiveActivityMatching(List<ScheduleFData> scheduleFList,
-                                                       List<Form8582Data> form8582List,
-                                                       ValidationResult result) {
-        // Get all passive activities from Schedule F
-        List<ScheduleFData> passiveActivities = scheduleFList.stream()
-                .filter(f -> !f.isMateriallyParticipated())
-                .collect(Collectors.toList());
-        
-        // Create map of Form 8582 activities
-        Map<String, Form8582Data> form8582Map = form8582List.stream()
-                .collect(Collectors.toMap(
-                        Form8582Data::getActivityName,
-                        f -> f,
-                        (existing, replacement) -> existing
-                ));
-        
-        // Check each passive activity
-        for (ScheduleFData scheduleF : passiveActivities) {
-            String businessName = scheduleF.getBusinessName();
-            String principalProduct = scheduleF.getPrincipalProduct();
+        for (JsonNode lineItem : lineItems) {
+            String lineName = lineItem.path("lineNameTxt").asText();
             
-            // Try to match by business name or principal product
-            boolean found = form8582Map.containsKey(businessName) || 
-                              form8582Map.containsKey(principalProduct);
-            
-            if (!found) {
-                result.setValid(false);
-                result.getErrors().add(String.format(
-                        "Passive activity '%s' from Schedule F (Seq %s) not found on Form 8582",
-                        principalProduct, scheduleF.getSequenceNum()
-                ));
+            if (lineName.contains("/ParentWrkshtPassiveGrp/WrkshtPassiveGrp")) {
+                parsePassiveActivity(lineItem, data);
             }
         }
     }
 
     /**
-     * Validation 2: Verify loss calculations and matching
+     * Parses a single passive activity from Form 8582
      */
-    private void validateLossCalculations(List<ScheduleFData> scheduleFList,
-                                                 List<Form8582Data> form8582List,
-                                                 ValidationResult result) {
-        // Create map of Form 8582 activities
-        Map<String, Form8582Data> form8582Map = form8582List.stream()
-                .collect(Collectors.toMap(
-                        Form8582Data::getActivityName,
-                        f -> f,
-                        (existing, replacement) -> existing
-                ));
+    private void parsePassiveActivity(JsonNode group, Form8582Data data) {
+        PassiveActivity activity = new PassiveActivity();
         
-        // Check each Schedule F with a loss
-        for (ScheduleFData scheduleF : scheduleFList) {
-            BigDecimal calculatedNet = scheduleF.getCalculatedNetAmt();
-            
-            // Only validate if there's a loss
-            if (calculatedNet.compareTo(BigDecimal.ZERO) < 0) {
-                String activityName = scheduleF.getPrincipalProduct();
-                Form8582Data form8582Data = form8582Map.get(activityName);
-                
-                if (form8582Data != null) {
-                    BigDecimal form8582Loss = form8582Data.getCurrentYearNetLossAmt();
-                    
-                    // Compare absolute values (losses are negative on Schedule F, positive on 8582)
-                    BigDecimal calculatedLossAbs = calculatedNet.abs();
-                    
-                    if (calculatedLossAbs.compareTo(form8582Loss) != 0) {
-                        result.setValid(false);
-                        result.getErrors().add(String.format(
-                                "Loss mismatch for '%s': Schedule F calculated loss = $%s, Form 8582 loss = $%s",
-                                activityName, calculatedLossAbs, form8582Loss
-                        ));
-                    }
-                } else if (!scheduleF.isMateriallyParticipated()) {
-                    // Passive activity with loss should be on Form 8582
-                    result.setValid(false);
-                    result.getErrors().add(String.format(
-                            "Passive activity '%s' with loss $%s not found on Form 8582",
-                            activityName, calculatedNet.abs()
-                    ));
-                }
-            }
+        JsonNode lineItems = group.path("lineItems");
+        if (!lineItems.isArray()) {
+            return;
         }
-    }
-
-    /**
-     * Validation 3: Verify active activities are NOT in Form 8582
-     */
-    private void validateActiveActivitiesExcluded(List<ScheduleFData> scheduleFList,
-                                                        List<Form8582Data> form8582List,
-                                                        ValidationResult result) {
-        // Get all active activities from Schedule F
-        List<ScheduleFData> activeActivities = scheduleFList.stream()
-                .filter(ScheduleFData::isMateriallyParticipated)
-                .collect(Collectors.toList());
         
-        // Create set of Form 8582 activity names
-        Set<String> form8582Names = form8582List.stream()
-                .map(Form8582Data::getActivityName)
-                .collect(Collectors.toSet());
+        for (JsonNode lineItem : lineItems) {
+            String lineName = lineItem.path("lineNameTxt").asText();
+            
+            if (lineName.contains("/NonParticipateActivityNm")) {
+                activity.setActivityName(lineItem.path("perReturnValueTxt").asText());
+            } else if (lineName.contains("/CurrentYearNetLossAmt")) {
+                activity.setCurrentYearLoss(new BigDecimal(lineItem.path("perReturnValueTxt").asText("0")));
+            }
+        }
         
-        // Check if any active activity appears on Form 8582
-        for (ScheduleFData scheduleF : activeActivities) {
-            String activityName = scheduleF.getPrincipalProduct();
-            
-            if (form8582Names.contains(activityName)) {
-                result.setValid(false);
-                result.getErrors().add(String.format(
-                        "Active activity '%s' (materially participated) should NOT appear on Form 8582",
-                        activityName
-                ));
-            }
-        }
-    }
-
-    /**
-     * Validation 4: Verify Line 34 shows $0 for losses
-     */
-    private void validateLine34ZeroForLosses(List<ScheduleFData> scheduleFList,
-                                                    ValidationResult result) {
-        for (ScheduleFData scheduleF : scheduleFList) {
-            BigDecimal calculatedNet = scheduleF.getCalculatedNetAmt();
-            BigDecimal reportedNet = scheduleF.getNetFarmProfitLossAmt();
-            
-            // If there's a loss, Line 34 should show $0
-            if (calculatedNet.compareTo(BigDecimal.ZERO) < 0) {
-                if (reportedNet.compareTo(BigDecimal.ZERO) != 0) {
-                    result.getWarnings().add(String.format(
-                            "Schedule F '%s' (Seq %s): Line 34 shows $%s but should show $0 for losses (calculated loss: $%s)",
-                            scheduleF.getPrincipalProduct(),
-                            scheduleF.getSequenceNum(),
-                            reportedNet,
-                            calculatedNet.abs()
-                        ));
-                }
-            }
-        }
-    }
-
-    /**
-     * Helper method to get line item value from form
-     */
-    private String getLineItemValue(JsonNode form, String lineNamePath) {
-        JsonNode lineItem = findLineItem(form, lineNamePath);
-        if (lineItem != null && !lineItem.isMissingNode()) {
-            JsonNode valueNode = lineItem.at("/perReturnValueTxt");
-            if (!valueNode.isMissingNode()) {
-                return valueNode.asText("");
-            }
-        }
-        return "";
-    }
-
-    /**
-     * Helper method to find a line item by path
-     */
-    private JsonNode findLineItem(JsonNode form, String lineNamePath) {
-        JsonNode lineItems = form.at("/lineItems");
-        if (lineItems.isArray()) {
-            for (JsonNode item : lineItems) {
-                String lineName = item.at("/lineNameTxt").asText("");
-                if (lineName.equals(lineNamePath)) {
-                    return item;
-                }
-                // Check nested lineItems
-                JsonNode nested = findLineItem(item, lineNamePath);
-                if (nested != null) {
-                    return nested;
-                }
-            }
-        }
-        return null;
-    }
-
-    /**
-     * Helper method to parse amount string to BigDecimal
-     */
-    private BigDecimal parseAmount(String amountStr) {
-        if (amountStr == null || amountStr.trim().isEmpty()) {
-            return BigDecimal.ZERO;
-        }
-        try {
-            // Remove commas and dollar signs
-            String cleaned = amountStr.replaceAll("[,$]", "").trim();
-            return new BigDecimal(cleaned);
-        } catch (NumberFormatException e) {
-            return BigDecimal.ZERO;
+        if (activity.getActivityName() != null && !activity.getActivityName().isBlank()) {
+            data.addActivity(activity);
         }
     }
 
     // Data classes
-    
-    @Data
-    @Builder
-    @NoArgsConstructor
-    @AllArgsConstructor
-    public static class ValidationResult {
-        private boolean valid;
-        private List<String> errors;
-        private List<String> warnings;
-        private List<ScheduleFData> scheduleFDetails;
-        private List<Form8582Data> form8582Details;
-    }
-    
-    @Data
-    @NoArgsConstructor
-    @AllArgsConstructor
     public static class ScheduleFData {
-        private String sequenceNum;
-        private String ein;
         private String businessName;
-        private String principalProduct;
         private boolean materiallyParticipated;
-        private BigDecimal grossIncomeAmt; // Line 9
-        private BigDecimal totalExpensesAmt; // Line 33
-        private BigDecimal netFarmProfitLossAmt; // Line 34
-        private BigDecimal calculatedNetAmt; // Line 9 - Line 33
+        private BigDecimal grossIncome = ZERO;
+        private BigDecimal totalExpenses = ZERO;
+        private BigDecimal netFarmProfitLoss = ZERO;
+
+        public String getBusinessName() { return businessName; }
+        public void setBusinessName(String businessName) { this.businessName = businessName; }
+        public boolean isMateriallyParticipated() { return materiallyParticipated; }
+        public void setMateriallyParticipated(boolean materiallyParticipated) { this.materiallyParticipated = materiallyParticipated; }
+        public BigDecimal getGrossIncome() { return grossIncome; }
+        public void setGrossIncome(BigDecimal grossIncome) { this.grossIncome = grossIncome; }
+        public BigDecimal getTotalExpenses() { return totalExpenses; }
+        public void setTotalExpenses(BigDecimal totalExpenses) { this.totalExpenses = totalExpenses; }
+        public BigDecimal getNetFarmProfitLoss() { return netFarmProfitLoss; }
+        public void setNetFarmProfitLoss(BigDecimal netFarmProfitLoss) { this.netFarmProfitLoss = netFarmProfitLoss; }
     }
-    
-    @Data
-    @NoArgsConstructor
-    @AllArgsConstructor
+
     public static class Form8582Data {
+        private List<PassiveActivity> activities = new ArrayList<>();
+
+        public void addActivity(PassiveActivity activity) {
+            activities.add(activity);
+        }
+
+        public PassiveActivity findActivityByName(String name) {
+            return activities.stream()
+                .filter(a -> a.getActivityName().equalsIgnoreCase(name))
+                .findFirst()
+                .orElse(null);
+        }
+
+        public List<PassiveActivity> getActivities() { return activities; }
+    }
+
+    public static class PassiveActivity {
         private String activityName;
-        private BigDecimal currentYearNetLossAmt;
-        private BigDecimal overallLossAmt;
+        private BigDecimal currentYearLoss = ZERO;
+
+        public String getActivityName() { return activityName; }
+        public void setActivityName(String activityName) { this.activityName = activityName; }
+        public BigDecimal getCurrentYearLoss() { return currentYearLoss; }
+        public void setCurrentYearLoss(BigDecimal currentYearLoss) { this.currentYearLoss = currentYearLoss; }
+    }
+
+    public static class ValidationResult {
+        private List<String> errors = new ArrayList<>();
+        private List<String> warnings = new ArrayList<>();
+        private List<String> successes = new ArrayList<>();
+        private List<String> infos = new ArrayList<>();
+
+        public void addError(String error) { errors.add(error); }
+        public void addWarning(String warning) { warnings.add(warning); }
+        public void addSuccess(String success) { successes.add(success); }
+        public void addInfo(String info) { infos.add(info); }
+
+        public boolean isValid() { return errors.isEmpty(); }
+        public List<String> getErrors() { return errors; }
+        public List<String> getWarnings() { return warnings; }
+        public List<String> getSuccesses() { return successes; }
+        public List<String> getInfos() { return infos; }
     }
 }
